# coding-katas

./: .gitignore  LICENSE  README.md
Katas/: CMakeLists.txt
Katas/CPlusPlus/: CMakeLists.txt
Katas/CPlusPlus/src/: CMakeLists.txt
Katas/CPlusPlus/src/FizzBuzz/: FizzBuzzer.h  LookupFizzBuzzer.cpp  LookupFizzBuzzer.h  SimpleFizzBuzzer.cpp  SimpleFizzBuzzer.h  SteppedSetFizzBuzzer.cpp  SteppedSetFizzBuzzer.h
Katas/CPlusPlus/test/: CMakeLists.txt  main.cpp
Katas/CPlusPlus/test/FizzBuzz/: FizzBuzzExpectationBuilder.h  testFizzBuzz.cpp
Katas/Checkout/: CMakeLists.txt
Katas/Checkout/checkout/: CMakeLists.txt
Katas/Checkout/checkout/include/: Checkout.h  IItemPricingRules.h  IPricingRule.h  ItemPricingRules.h  QuantityDiscountPricingRule.h  StandardPricingRule.h
Katas/Checkout/checkout/src/: Checkout.cpp  ItemPricingRules.cpp  QuantityDiscountPricingRule.cpp  StandardPricingRule.cpp
Katas/Checkout/test.checkout/: CMakeLists.txt
Katas/Checkout/test.checkout/src/: CheckoutTest.cpp
Katas/FizzBuzz/: CMakeLists.txt  README.md
Katas/FizzBuzz/fizzbuzz/: CMakeLists.txt  main.cpp
Katas/FizzBuzz/fizzbuzz/include/: LookupFizzBuzzer.h
Katas/FizzBuzz/fizzbuzz/src/: LookupFizzBuzzer.cpp  SimpleFizzBuzzer.cpp  SteppedSetFizzBuzzer.cpp
Katas/FizzBuzz/test.fizzbuzz/: CMakeLists.txt
Katas/FizzBuzz/test.fizzbuzz/src/: FizzBuzzExpectationBuilder.h  FizzBuzzTest.cpp
